added icons to other websites

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link rel="stylesheet" href="css/main.css" />
     <!-- font links -->
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
@@ -35,18 +35,18 @@
             <a href="#" class="nav-options"> ABOUT ME </a>
           </div>
           <div class="col s6 m3">
-            <a href="#" class="nav-options"> Portfolio </a>
+            <a href="#" class="nav-options"> PORTFOLIO </a>
           </div>
           <div class="col s6 m3">
-            <a href="#" class="nav-options"> Resume </a>
+            <a href="#" class="nav-options"> RESUME </a>
           </div>
           <div class="col s6 m3">
-            <a href="#" class="nav-options"> Contact me </a>
+            <a href="#" class="nav-options"> CONTACT ME </a>
           </div>
         </center>
       </div>
 
-      <div class="row main-content">
+      <div class="row content-row">
         <!-- left side - text info -->
         <div id="self" class="col m4 s12">
           <h4> Richard Wei </h4>
@@ -56,27 +56,24 @@
             Toronto Scaborough campus. I'm in the specialist software engineering
             stream and will be having my first work term for coop in winter :^)
           </p>
-
           <p>
             I usually fequent these sites
           </p>
-
-          <!-- links to profiles on other websites
-          <div id="icon-panel">
+          <!-- links to profiles on other websites -->
+          <div class="icon-panel">
             <a href="https://github.com/13ABEL">
               <img class="responsive-img" src="images/icons/git.png" />
-              <p> @13ABEL </p>
+              <p> @13abel </p>
             </a>
             <a href="https://www.behance.net/boiledbuns">
               <img class="responsive-img" src="images/icons/behance.png" />
               <p> @boiledbuns </p>
             </a>
-            <a href="https://www.instagram.com/therichardwei">
+            <a ref="https://www.instagram.com/therichardwei">
               <img class="responsive-img" src="images/icons/instagram.png"/>
               <p> @therichardwei </p>
             </a>
           </div>
--->
         </div>
 
 
