--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cardo:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Quattrocento:400,700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet">
 
+<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700" rel="stylesheet">
     <title> Richard Wei </title>
     <!-- necessary component for materialize grid -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -38,15 +41,16 @@
 
       <!-- Information -->
       <div class="right-container">
-        <h1>Hi! I'm <br><span>Richard </span></h1>
-
+        <h1>Hi there <span>✋✋✋</span></h1>
+        <h3> I'm <a>Richard Wei</a> and it's nice to meet you!</h3>
         <p>
            I'm a second year computer science student at the University of Toronto
-           Scarborough. I'm always looking for ways to integrate my background in
-           visual arts with my current studies! I'll be on work term during the
-           2018 winter and summer terms!
+           Scarborough! I'm a graduate of the Arts Unionville Visual Arts program
+           and love art.
+
+           If you have time, check out some of my work on behance!
         </p>
-        <ul>
+        <ul class="account-links">
           <li>Behance</li>
           <li>Github</li>
           <li>Github</li>
