polished up some of the spacing and added some extra links

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
   <body>
     <!-- row at top for buttons -->
     <div class="header-row">
-      <h1>Portfolio</h1>
-      <h1>Portfolio</h1>
-      <h1>Portfolio</h1>
-      <h1>Portfolio</h1>
+      <h1><a class="color-secondary" href="https://github.com/13ABEL">Github</a></h1>
+      <h1><a class="color-secondary" href="https://www.behance.net/boiledbuns">Behance</a></h1>
+      <h1><a class="color-secondary" href="">Portfolio</a></h1>
+      <h1><a class="color-secondary" href="">Resume</a></h1>
     </div>
 
 
@@ -45,17 +45,29 @@
         <h3> I'm <a>Richard Wei</a> and it's nice to meet you!</h3>
         <p>
            I'm a second year computer science student at the University of Toronto
-           Scarborough! I'm a graduate of the Arts Unionville Visual Arts program
-           and love art.
+           Scarborough and a graduate of the Arts Unionville Visual Arts program. Art
+           and programming are my favourite things.
+           </article>
 
            If you have time, check out some of my work on behance!
-        </p>
-        <ul class="account-links">
-          <li>Behance</li>
-          <li>Github</li>
-          <li>Github</li>
+           <br/>
+           <br/>
 
-        </ul>
+           Feel free to drop me a line
+        </p>
+        <!-- ul class="account-links">
+          <li>Github</li>
+          <li>BeHance</li>
+          <li>Instagram</li>
+        </ul-->
+
+
+
+
+
+
+
+
       </div>
 
 
