--- a/index.html
+++ b/index.html
@@ -2,45 +2,40 @@
 <html>
   <head>
     <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link rel="stylesheet" href="styles/main.css" />
     <!-- font links -->
-    <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Condensed" rel="stylesheet">
-
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Cardo:400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Quattrocento:400,700" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet">
 
-<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700" rel="stylesheet">
+
     <title> Richard Wei </title>
-    <!-- necessary component for materialize grid -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   </head>
   <!-- the real content -->
   <body>
-    <!-- row at top for buttons -->
-    <div class="header-row">
-      <h1><a class="color-secondary" href="https://github.com/13ABEL">Github</a></h1>
-      <h1><a class="color-secondary" href="https://www.behance.net/boiledbuns">Behance</a></h1>
-      <h1><a class="color-secondary" href="">Portfolio</a></h1>
-      <h1><a class="color-secondary" href="">Resume</a></h1>
-    </div>
 
 
-    <div class="flexbox">
+
+    <div class="row">
       <!-- image -->
       <div class="left-container">
-
-
+        <img src="./images/portfolio/Chrysallis.png"/>
       </div>
 
       <!-- Information -->
       <div class="right-container">
+        <!-- row at top for buttons -->
+        <div class="header-row">
+          <h1><a class="color-secondary" href="https://github.com/13ABEL">Github</a></h1>
+          <h1><a class="color-secondary" href="https://www.behance.net/boiledbuns">Behance</a></h1>
+          <h1><a class="color-secondary" href="">Portfolio</a></h1>
+          <h1><a class="color-secondary" href="">Resume</a></h1>
+        </div>
+
         <h1>Hi there <span>✋✋✋</span></h1>
         <h3> I'm <a>Richard Wei</a> and it's nice to meet you!</h3>
         <p>
@@ -61,18 +56,11 @@
           <li>Instagram</li>
         </ul-->
 
-
-
-
-
-
-
-
       </div>
-
-
-
     </div>
+
+
+
 
   </body>
 <html>
