changed color of buttoms to red to complement theme and made sure page is full height

--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
   <!-- the real content -->
   <body>
 
-
-
     <div class="row">
       <!-- image -->
       <div class="left-container">
@@ -32,7 +30,7 @@
         <div class="header-row">
           <h1><a class="color-secondary" href="https://github.com/13ABEL">Github</a></h1>
           <h1><a class="color-secondary" href="https://www.behance.net/boiledbuns">Behance</a></h1>
-          <h1><a class="color-secondary" href="">Portfolio</a></h1>
+          <!--h1><a class="color-secondary" href="">Portfolio</a></h1-->
           <h1><a class="color-secondary" href="">Resume</a></h1>
         </div>
 
