just updated year and removed unnecessary ai file

--- a/index.html
+++ b/index.html
@@ -37,16 +37,15 @@
         <h1>Hi there <span>✋✋✋</span></h1>
         <h3> I'm <a>Richard Wei</a> and it's nice to meet you!</h3>
         <p>
-           I'm a second year computer science student at the University of Toronto
-           Scarborough and a graduate of the Arts Unionville Visual Arts program. Art
-           and programming are my favourite things.
+           I'm a third year computer science student at the University of Toronto
+           Scarborough and a graduate of the Arts Unionville Visual Arts program.
            </article>
 
            If you have time, check out some of my work on behance!
            <br/>
            <br/>
 
-           Feel free to drop me a line
+           Feel free to drop me a line :)
         </p>
         <!-- ul class="account-links">
           <li>Github</li>
