--- a/index.html
+++ b/index.html
@@ -4,60 +4,28 @@
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="styles/main.css" />
     <!-- font links -->
-
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700" rel="stylesheet">
-
-    <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet">
-
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap" rel="stylesheet"> 
 
     <title> Richard Wei </title>
-
   </head>
   <!-- the real content -->
-  <body>
+  <body id="container">
+    <h1>Hi, I'm Richard Wei:)</h1>
+    <p>
+      I'm an Android developer, visual artist, and a fourth year comp sci student at the 
+      <span class="bold">University of Toronto</span>. 
+      I've completed two internships at Shopify, working on the <span class="bold">Android Point of Sale app</span>
+      as well as the <span class="bold">Mobile App Bridge</span>.
+    </p>
 
-    <div class="row">
-      <!-- image -->
-      <div class="left-container">
-        <img src="./images/portfolio/Chrysallis.png"/>
-      </div>
-
-      <!-- Information -->
-      <div class="right-container">
-        <!-- row at top for buttons -->
-        <div class="header-row">
-          <h1><a class="color-secondary" href="https://github.com/13ABEL">Github</a></h1>
-          <h1><a class="color-secondary" href="https://www.behance.net/boiledbuns">Behance</a></h1>
-          <!--h1><a class="color-secondary" href="">Portfolio</a></h1-->
-          <h1><a class="color-secondary" href="">Resume</a></h1>
-        </div>
-
-        <h1>Hi there <span>✋✋✋</span></h1>
-        <h3> I'm <a>Richard Wei</a> and it's nice to meet you!</h3>
-        <p>
-           I'm a third year computer science student at the University of Toronto
-           Scarborough and a graduate of the Arts Unionville Visual Arts program.
-           </article>
-
-           If you have time, check out some of my work on behance!
-           <br/>
-           <br/>
-
-           Feel free to drop me a line :)
-        </p>
-        <!-- ul class="account-links">
-          <li>Github</li>
-          <li>BeHance</li>
-          <li>Instagram</li>
-        </ul-->
-
-      </div>
-    </div>
-
-
-
-
+    <h3>Hobbies</h3>
+    <p> 
+      I'm usually either working on mobile apps, working out, trying my hand at learning something new, 
+      or trying to build the true Unicorn Priest in Hearthstone
+    </p>
+    <p>> My projects are on <a href="https://github.com/13ABEL">github</a></p>
+    <p>> Check out my illustrations on <a href="https://www.behance.net/boiledbuns">behance</a></p>
+    <p>> Feel free to connect with me on <a href="https://www.linkedin.com/in/therichardwei/">Linkedin</a>  as well! </p>
+    <p></p>
   </body>
 <html>
