--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     
     <div> 
       Links:
-      <a class="tab" href="https://github.com/13ABEL">github</a>
+      <a class="tab" href="https://github.com/boiledbuns">github</a>
       <a class="tab" href="https://www.behance.net/boiledbuns">behance</a>
       <a class="tab" href="https://www.linkedin.com/in/therichardwei/">Linkedin</a>
       <a class="" href="">Blog (coming soon)</a>
