--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap" rel="stylesheet" />
 
   <title>Richard Wei</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <!-- the real content -->
 
