added better columns for mobile hobbies

--- a/index.html
+++ b/index.html
@@ -1,76 +1,71 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="styles/main.css" />
+    <!-- font links -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap"
+      rel="stylesheet"
+    />
 
-<head>
-  <!-- Compiled and minified CSS -->
-  <link rel="stylesheet" href="styles/main.css" />
-  <!-- font links -->
-  <link href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap" rel="stylesheet" />
+    <title>Richard Wei</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
+  <!-- the real content -->
 
-  <title>Richard Wei</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<!-- the real content -->
+  <body id="container">
+    <div>
+      <img id="profile" src="my_face.jpg" />
+    </div>
+    <h1>Hi, I'm <span class="bold me">Richard Wei</span> :)</h1>
+    <p>
+      I'm an Android developer, visual artist, and fourth year comp sci student
+      at the
+      <span class="bold emphasis">University of Toronto</span>. I've completed
+      two internships at <span class="bold emphasis">Shopify</span>, working on
+      the
+      <span class="emphasis">Android Point of Sale app</span>
+      as well as the
+      <span class="emphasis">Mobile App Bridge</span>. I'm currently learning
+      Machine Learning!
+    </p>
 
-<body id="container">
-  <div>
-    <img id="profile" src="my_face.jpg" />
-  </div>
-  <h1 style="margin: 0 auto;">
-    Hi, I'm <span class="bold me">Richard Wei</span> :)
-  </h1>
-  <p>
-    I'm an Android developer, visual artist, and fourth year comp sci student
-    at the
-    <span class="bold emphasis">University of Toronto</span>. I've completed
-    two internships at <span class="bold emphasis">Shopify</span>, working on
-    the
-    <span class="emphasis">Android Point of Sale app</span>
-    as well as the
-    <span class="emphasis">Mobile App Bridge</span>. I'm currently learning
-    Machine Learning!
-  </p>
+    <div>
+      <a class="tab" href="https://github.com/boiledbuns">Github</a>
+      <a class="tab" href="https://www.linkedin.com/in/therichardwei/"
+        >Linkedin</a
+      >
+      <a class="tab" href="https://www.behance.net/boiledbuns">Behance</a>
+      <a class="tab" href="https://medium.com/@thetower">Medium</a>
+    </div>
 
-  <div>
-    <a class="tab" href="https://github.com/boiledbuns">Github</a>
-    <a class="tab" href="https://www.linkedin.com/in/therichardwei/">Linkedin</a>
-    <a class="tab" href="https://www.behance.net/boiledbuns">Behance</a>
-    <a class="tab" href="https://medium.com/@thetower">Medium</a>
-  </div>
-
-  <div class="hobby-container">
-    <h3 class="hobby-container-title">Hobbies</h3>
-    <table>
-      <tr>
-        <td class="hobby-title">illustration</td>
-        <td class="hobby-body">
+    <div class="hobby-container">
+      <h3 class="hobby-container-title">Hobbies</h3>
+      <div class="hobby-row">
+        <div class="hobby-title">illustration</div>
+        <div class="hobby-body">
           I'm trained in traditional mediums like charcoal, ink, and graphite
           but I fell in love with digital illustration. Please check out my
           illustrations on behance!
-        </td>
-      </tr>
-
-      <tr>
-        <td class="hobby-title">reading</td>
-        <td class="hobby-body">
-          I'm a huge fan of Fantasy, Sci-fi, and Horror! My favourite authors are
-          Brandon Sanderson, Stephen King, and Frank Herbert. I'm currently not reading
-          anything and mostly just binging podcasts :o
-        </td>
-      </tr>
-
-      <tr>
-        <td class="hobby-title">working out</td>
-        <td class="hobby-body">
-          I'm currently only running since the gyms are closed, but
-          I normally run a 4 day variant of nsuns when they're open! 
-        </td>
-      </tr>
-    </table>
-  </div>
-</body>
-<html>
-
-</html>
-
+        </div>
+      </div>
+      <div class="hobby-row">
+        <div class="hobby-title">reading</div>
+        <div class="hobby-body">
+          I'm a huge fan of Fantasy, Sci-fi, and Horror! My favourite authors
+          are Brandon Sanderson, Stephen King, and Frank Herbert. I'm currently
+          not reading anything and mostly just binging podcasts :o
+        </div>
+      </div>
+      <div class="hobby-row">
+        <div class="hobby-title">working out</div>
+        <div class="hobby-body">
+          I'm currently only running since the gyms are closed, but I normally
+          run a 4 day variant of nsuns when they're open!
+        </div>
+      </div>
+    </div>
+  </body>
+  <html></html>
 </html>
