--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
     <p>
       I'm an Android developer, visual artist, and fourth year comp sci student
       at the
-      <span class="bold emphasis">University of Toronto</span>. I've completed
-      two internships at <span class="bold emphasis">Shopify</span>, working on
+      <span class="bold emphasis">University of Toronto</span> graduating at the 
+      end of December 2020. I've completed two internships at 
+      <span class="bold emphasis">Shopify</span> working on
       the
       <span class="emphasis">Android Point of Sale app</span>
       as well as the
       <span class="emphasis">Mobile App Bridge</span>. I'm currently learning
-      Machine Learning!
+      Machine Learning and looking for interesting opportunities!
     </p>
 
     <div>
